{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 329,
  "lineage": "272016d5-f03d-151d-29f7-1e2374db5ab3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "first_subnet",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:924598602123:instance/i-0ce80bdc6b7dd988b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce80bdc6b7dd988b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ubuntu",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-039610d4f6f8122a5",
            "private_dns": "ip-10-0-1-187.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.187",
            "public_dns": "ec2-3-94-82-49.compute-1.amazonaws.com",
            "public_ip": "3.94.82.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09ff372244c3ca0c9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0bce350fb1a6d46cb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05983facdaac6ca52",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bce350fb1a6d46cb"
            ]
          },
          "dependencies": [
            "aws_security_group.allow",
            "aws_subnet.cloud",
            "aws_vpc.net",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "second_subnet",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:924598602123:instance/i-00deef0875dd3457f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00deef0875dd3457f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ubuntu",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-028c1b94998385105",
            "private_dns": "ip-10-0-2-128.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.128",
            "public_dns": "ec2-54-91-173-246.compute-1.amazonaws.com",
            "public_ip": "54.91.173.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cf2d13bcc5ae8d44",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0bce350fb1a6d46cb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025496bb257c6ade8",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bce350fb1a6d46cb"
            ]
          },
          "dependencies": [
            "aws_security_group.allow",
            "aws_subnet.cloud",
            "aws_vpc.net",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "third_subnet",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:924598602123:instance/i-0f6e49b9d566d0276",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f6e49b9d566d0276",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ubuntu",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bf7320b0fd31c860",
            "private_dns": "ip-10-0-3-72.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.72",
            "public_dns": "ec2-204-236-243-248.compute-1.amazonaws.com",
            "public_ip": "204.236.243.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0565072fc58f19790",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0bce350fb1a6d46cb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05079889facda3531",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bce350fb1a6d46cb"
            ]
          },
          "dependencies": [
            "aws_security_group.allow",
            "aws_subnet.cloud",
            "aws_vpc.net",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "net-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924598602123:internet-gateway/igw-00f65f3ea1db0bf4d",
            "id": "igw-00f65f3ea1db0bf4d",
            "owner_id": "924598602123",
            "tags": {
              "Name": "net-gw"
            },
            "tags_all": {
              "Name": "net-gw"
            },
            "vpc_id": "vpc-0496c78e5dcc59156"
          },
          "dependencies": [
            "aws_vpc.net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "load",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:924598602123:loadbalancer/app/web/d8422feb38e2c4a6",
            "arn_suffix": "app/web/d8422feb38e2c4a6",
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-1500981438.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:924598602123:loadbalancer/app/web/d8422feb38e2c4a6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0bce350fb1a6d46cb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-025496bb257c6ade8"
              },
              {
                "subnet_id": "subnet-05079889facda3531"
              },
              {
                "subnet_id": "subnet-05983facdaac6ca52"
              }
            ],
            "subnets": [
              "subnet-025496bb257c6ade8",
              "subnet-05079889facda3531",
              "subnet-05983facdaac6ca52"
            ],
            "vpc_id": "vpc-0496c78e5dcc59156",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow",
            "aws_subnet.cloud",
            "aws_vpc.net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:924598602123:listener/app/web/d8422feb38e2c4a6/f6e33ca87a2eed70",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:924598602123:targetgroup/site/a3f6671bee8dfc56",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:924598602123:listener/app/web/d8422feb38e2c4a6/f6e33ca87a2eed70",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:924598602123:loadbalancer/app/web/d8422feb38e2c4a6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.load",
            "aws_lb_target_group.target",
            "aws_security_group.allow",
            "aws_subnet.cloud",
            "aws_vpc.net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:924598602123:targetgroup/site/a3f6671bee8dfc56",
            "arn_suffix": "targetgroup/site/a3f6671bee8dfc56",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:924598602123:targetgroup/site/a3f6671bee8dfc56",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "site",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0496c78e5dcc59156"
          },
          "dependencies": [
            "aws_vpc.net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "first_subnet",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:924598602123:targetgroup/site/a3f6671bee8dfc56-20230205203510637500000007",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:924598602123:targetgroup/site/a3f6671bee8dfc56",
            "target_id": "i-0ce80bdc6b7dd988b"
          },
          "dependencies": [
            "aws_instance.ubuntu",
            "aws_lb_target_group.target",
            "aws_security_group.allow",
            "aws_subnet.cloud",
            "aws_vpc.net",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "second_subnet",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:924598602123:targetgroup/site/a3f6671bee8dfc56-20230205203510580600000005",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:924598602123:targetgroup/site/a3f6671bee8dfc56",
            "target_id": "i-00deef0875dd3457f"
          },
          "dependencies": [
            "aws_instance.ubuntu",
            "aws_lb_target_group.target",
            "aws_security_group.allow",
            "aws_subnet.cloud",
            "aws_vpc.net",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "third_subnet",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:924598602123:targetgroup/site/a3f6671bee8dfc56-20230205203510603900000006",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:924598602123:targetgroup/site/a3f6671bee8dfc56",
            "target_id": "i-0f6e49b9d566d0276"
          },
          "dependencies": [
            "aws_instance.ubuntu",
            "aws_lb_target_group.target",
            "aws_security_group.allow",
            "aws_subnet.cloud",
            "aws_vpc.net",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "net-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924598602123:route-table/rtb-0cda8f6265d1f851d",
            "id": "rtb-0cda8f6265d1f851d",
            "owner_id": "924598602123",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00f65f3ea1db0bf4d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "net-route"
            },
            "tags_all": {
              "Name": "net-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0496c78e5dcc59156"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.net-gw",
            "aws_vpc.net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "time",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "first_subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a376b655f31c078",
            "route_table_id": "rtb-0cda8f6265d1f851d",
            "subnet_id": "subnet-05983facdaac6ca52"
          },
          "dependencies": [
            "aws_internet_gateway.net-gw",
            "aws_route_table.net-route",
            "aws_subnet.cloud",
            "aws_vpc.net"
          ]
        },
        {
          "index_key": "second_subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0040f2cbe2aac0300",
            "route_table_id": "rtb-0cda8f6265d1f851d",
            "subnet_id": "subnet-025496bb257c6ade8"
          },
          "dependencies": [
            "aws_internet_gateway.net-gw",
            "aws_route_table.net-route",
            "aws_subnet.cloud",
            "aws_vpc.net"
          ]
        },
        {
          "index_key": "third_subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09847df2b4fc26164",
            "route_table_id": "rtb-0cda8f6265d1f851d",
            "subnet_id": "subnet-05079889facda3531"
          },
          "dependencies": [
            "aws_internet_gateway.net-gw",
            "aws_route_table.net-route",
            "aws_subnet.cloud",
            "aws_vpc.net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924598602123:security-group/sg-0bce350fb1a6d46cb",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bce350fb1a6d46cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow",
            "name_prefix": "",
            "owner_id": "924598602123",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0496c78e5dcc59156"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "first_subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924598602123:subnet/subnet-05983facdaac6ca52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05983facdaac6ca52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924598602123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0496c78e5dcc59156"
          },
          "dependencies": [
            "aws_vpc.net"
          ]
        },
        {
          "index_key": "second_subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924598602123:subnet/subnet-025496bb257c6ade8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025496bb257c6ade8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924598602123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0496c78e5dcc59156"
          },
          "dependencies": [
            "aws_vpc.net"
          ]
        },
        {
          "index_key": "third_subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924598602123:subnet/subnet-05079889facda3531",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05079889facda3531",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924598602123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0496c78e5dcc59156"
          },
          "dependencies": [
            "aws_vpc.net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "net",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924598602123:vpc/vpc-0496c78e5dcc59156",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f715c86207b06098",
            "default_route_table_id": "rtb-073a8cdb8761e2aac",
            "default_security_group_id": "sg-017d22582d4f092d8",
            "dhcp_options_id": "dopt-009fa7417c0799e1d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0496c78e5dcc59156",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-073a8cdb8761e2aac",
            "owner_id": "924598602123",
            "tags": {
              "Name": "net"
            },
            "tags_all": {
              "Name": "net"
            }
          }
        }
      ]
    }
  ]
}